assets/sass/globals.scss
@use 'variables';

/* Generic */
:root {
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 20px;
  font-family: "PT Sans", sans-serif;
  color: var(--primary-blue);
  line-height: 32px;
  background-color: var(--primary-blue);
}

a {
  text-decoration: none;
  color: var(--link-blue);
  &:hover {
    text-decoration: underline;
  }
}

figure {
  margin: 0;
}

/* Tables e.g. in external Markdown content */
table {
  border-collapse: collapse;
}

table,
th,
td {
  border: 1px solid black;
}

th,
td {
  padding: 10px;
}

/* Headlines */
h1,
h2,
h3,
h4,
h5,
h6,
button {
  font-family: "Raleway", sans-serif;
}

h1 {
  font-size: 1.8rem;
}

h2 {
  font-size: 1.5rem;
}

h3 {
  font-size: 1.2rem;
  font-weight: 600;
}

h4 {
  border-bottom: 4px solid var(--highlight-green);
  margin-bottom: 0.6em;
  font-weight: 600;
  font-size: 1.2rem;
  margin-top: 0;
}

li p {
  margin: 0;
}



/* Responsive Embeds for Google Maps, Calendar, etc. */
.embed-container {
  position: relative;
  overflow: hidden;
  height: 0;
  padding-bottom: 0;
  padding-top: 56.25%;
  margin-bottom: 1.6rem;

  iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: 0;
    box-sizing: border-box;
  }
}

.justify-between {
  justify-content: space-between;
}

.justify-center {
  justify-content: center;
}

.flex {
  @include variables.desktop {
    display: flex;
  }
}

.flex-column {
  flex-direction: column;
}

.layouts-content {
  display: flex;
  flex-direction: column;
}

.layout {
  display: flex;
}

.slider-row {
  picture:not(:first-of-type) img {
    display: none;
  }
  @include variables.desktop {
    picture:not(:first-of-type) img {
      display: block;
    }
  }

  > picture img {
    flex: 1;
    width: 100%;
    height: 28vh;
    object-fit: cover;

    @include variables.desktop {
      max-width: 25vw;
      max-height: 35vh;
      object-fit: cover;
    }
  }
}

header {
  background-image: url("../img/ww_website_logo_mobile.svg");
  background-repeat: no-repeat;
  background-size: 13em;
  background-position: center center;
  height: 7em;
}

.button {
  border: 0;
  background-color: var(--highlight-green);
  font-weight: bold;
  font-family: "Raleway", sans-serif;
  color: white;
  padding: 0.5em 3em;
  text-align: center;
  display: inline-block;
  margin: 1em 0;
}

.grid {
  --columns: 12;
  --gutter: 1.5rem;
  display: grid;
  grid-gap: 0 var(--gutter);
  grid-template-columns: 1fr;
  margin-bottom: var(--gutter)
}

.grid {
  .column:not(:first-child) {
    margin-top: 1em;
  }
}
@include variables.desktop {
  .grid {
    .column:not(:first-child) {
      margin-top: initial;
    }
  }
}

.column img {
  width: 100%;
}

.column p {
  margin-top: 0;
}


@include variables.desktop {
  .grid {
    grid-template-columns: repeat(12, 1fr);
  }

  .grid > .column {
    grid-column: span var(--columns);
  }

  .content {
    flex-basis: 0;
    flex-grow: 2;
    margin-right: 0.6em;
  }

  .content-layout {
    flex-direction: row;
  }

  button {
    width: auto;
  }

  header {
    background-image: url("../img/ww_website_logo.svg");
    background-repeat: no-repeat;
    background-size: 25em;
    background-position: left center;
    height: 8em;
  }
}

/* -- */

.logo {
  width: 35%;
  margin: 40px 0;
}

/* Icons */
.arr-down {
  vertical-align: 7%;
  border: solid currentColor;
  border-width: 0 0.15em 0.15em 0;
  display: inline-block;
  padding: 0.2em;
  transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
}

.calendar {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.calendar li {
  display: flex;
  justify-content: space-between;
  margin-bottom: 20px;
}

.undecorated-link {
  color: var(--primary-blue);
  text-decoration: none;

  &:hover {
    text-decoration: underline;
  }
}

.icon {
  display: inline-flex;
  align-self: center;
}

.icon svg,
.icon img {
  height: 1em;
  width: 1em;
  fill: var(--primary-blue);
}

.icon.baseline svg,
.icon img {
  top: 0.125em;
  position: relative;
}

